@@ -86,16 +86,6 @@ class TestPreservedScalarString:
             """
         round_trip(inp, intermediate=dict(a='ghi\njkl\n\n'))
 
-    def Xtest_fold_string(self):
-        with pytest.raises(AssertionError) as excinfo:  # NOQA
-            inp = """
-            a: >
-              abc
-              def
-
-            """
-            round_trip(inp, intermediate=dict(a='abc def\n'))
-
     def test_fold_string(self):
         inp = """
         a: >
@@ -104,16 +94,6 @@ class TestPreservedScalarString:
 
         """
         round_trip(inp)
-
-    def test_fold_string_strip(self):
-        with pytest.raises(AssertionError) as excinfo:  # NOQA
-            inp = """
-            a: >-
-              abc
-              def
-
-            """
-            round_trip(inp, intermediate=dict(a='abc def'))
 
     def test_fold_string_strip(self):
         inp = """
